--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0'
 
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
 }
