--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CrudZuhair"></activity>
+        <activity android:name=".DeleteActivity"></activity>
+        <activity android:name=".SuccessActivity" />
+        <activity android:name=".BarangUpdate" />
+        <activity android:name=".CrudZuhair" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
